<resources>
    <string name="app_name">Example_SimpleAuth_FirebaseAuth_Java</string>

    <!--> 登入/註冊 <-->
    <string name="Main_Title">簡易會員系統</string>
    <string name="Main_SwitchStatus_Login">會員登入</string>
    <string name="Main_SwitchStatus_Register_No_Verify">會員註冊-無驗證</string>
    <string name="Main_SwitchStatus_Register_Email_Verify">會員註冊-Email驗證</string>
    <string name="Main_SwitchStatus_Register_Phone_Verify">會員註冊-手機驗證碼驗證</string>
    <string name="Main_Email">信箱：</string>
    <string name="Main_Password">密碼：</string>
    <string name="Main_Phone">手機號碼：</string>
    <string name="Main_VerifyCode">驗證碼：</string>
    <string name="Main_EmailHint">請輸入您的信箱</string>
    <string name="Main_PasswordHint">請輸入您的密碼</string>
    <string name="Main_PhoneHint">請輸入您的手機號碼</string>
    <string name="Main_VerifyCodeHint">請輸入您的驗證碼</string>
    <string name="Main_Login">登入</string>
    <string name="Main_Register">註冊</string>
    <string name="Main_Switch_Login">切換登入</string>
    <string name="Main_Switch_Register">切換註冊</string>

    <string name="Profile_Welcome">【%1$s】\n歡迎登入</string>
    <string name="profile_logout">登出</string>
</resources>