<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="Auth"
            type="com.ianfrost.example.example_simpleauth_firebaseauth_java.featureAuth.AuthViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background_style_1"
        tools:context=".MainActivity">

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Main_Title"
            android:textSize="@dimen/sp_28"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.2" />

        <TextView
            android:id="@+id/switchStatusTxv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_8"
            android:text="@string/Main_SwitchStatus_Login"
            android:textSize="@dimen/sp_18"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/title"
            app:layout_constraintVertical_bias="0.25" />

        <TableLayout
            android:id="@+id/tableLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_4"
            android:stretchColumns="1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/switchStatusTxv"
            app:layout_constraintWidth_percent="0.8">

            <TableRow android:id="@+id/emailLayout">

                <TextView
                    android:id="@+id/emailTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Main_Email"
                    android:textSize="@dimen/sp_16"
                    android:textAlignment="textEnd"/>

                <EditText
                    android:id="@+id/emailInput"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:hint="@string/Main_EmailHint"
                    android:inputType="textEmailAddress"
                    android:text="@={Auth.email}"
                    android:textColor="@color/auth_textColor"
                    android:textColorHint="@color/auth_textHintColor"
                    android:textSize="@dimen/sp_16"
                    android:importantForAutofill="no"
                    />
            </TableRow>

            <TableRow android:id="@+id/passwordLayout">

                <TextView
                    android:id="@+id/passwordTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Main_Password"
                    android:textSize="@dimen/sp_16"
                    android:textAlignment="textEnd"/>

                <EditText
                    android:id="@+id/passwordInput"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/Main_PasswordHint"
                    android:text="@={Auth.password}"
                    android:textSize="@dimen/sp_16"
                    android:textColor="@color/auth_textColor"
                    android:textColorHint="@color/auth_textHintColor"
                    android:inputType="textPassword"
                    android:importantForAutofill="no"
                    />
            </TableRow>

            <TableRow android:id="@+id/phoneLayout">

                <TextView
                    android:id="@+id/phoneTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Main_Phone"
                    android:textSize="@dimen/sp_16"
                    android:textAlignment="textEnd"
                    />

                <EditText
                    android:id="@+id/phoneInput"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/Main_PhoneHint"
                    android:text="@={Auth.phone}"
                    android:textSize="@dimen/sp_16"
                    android:textColor="@color/auth_textColor"
                    android:textColorHint="@color/auth_textHintColor"
                    android:inputType="phone"
                    android:importantForAutofill="no"/>
            </TableRow>

            <TableRow android:id="@+id/verifyCodeLayout">

                <TextView
                    android:id="@+id/verifyCodeTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Main_VerifyCode"
                    android:textSize="@dimen/sp_16"
                    android:textAlignment="textEnd"
                    />

                <EditText
                    android:id="@+id/verifyCodeInput"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/Main_VerifyCodeHint"
                    android:text="@={Auth.verifyCode}"
                    android:textSize="@dimen/sp_16"
                    android:textColor="@color/auth_textColor"
                    android:textColorHint="@color/auth_textHintColor"
                    android:inputType="textPassword"
                    android:importantForAutofill="no"/>

            </TableRow>


        </TableLayout>


        <Button
            android:id="@+id/confirmBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_10"
            android:autoSizeMaxTextSize="@dimen/sp_20"
            android:autoSizeMinTextSize="10sp"
            android:autoSizeTextType="uniform"
            android:backgroundTint="#3889E9"
            android:minWidth="@dimen/dp_100"
            android:minHeight="@dimen/dp_46"
            android:padding="@dimen/dp_8"
            android:text="@string/Main_Login"
            app:layout_constraintEnd_toStartOf="@+id/switchBtn"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="@+id/tableLayout"
            app:layout_constraintTop_toBottomOf="@+id/tableLayout"
            tools:targetApi="26" />

        <Button
            android:id="@+id/switchBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_10"
            android:autoSizeMaxTextSize="@dimen/sp_20"
            android:autoSizeMinTextSize="10sp"
            android:autoSizeTextType="uniform"
            android:backgroundTint="#448A31"
            android:ellipsize="end"
            android:minWidth="@dimen/dp_100"
            android:minHeight="@dimen/dp_46"
            android:padding="@dimen/dp_8"
            android:text="@string/Main_Switch_Register"
            app:layout_constraintEnd_toEndOf="@+id/tableLayout"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/confirmBtn"
            app:layout_constraintTop_toBottomOf="@+id/tableLayout"
            tools:targetApi="26" />

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="@dimen/dp_80"
            android:layout_height="@dimen/dp_80"
            android:background="@drawable/progress_background_style_1"
            android:indeterminateTint="#E1E1F6"
            android:visibility="gone"
            tools:visibility="visible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>